Prevent overflow issue when mobile nav open

--- a/src/app/components/header/_site-header.scss
+++ b/src/app/components/header/_site-header.scss
@@ -108,7 +108,7 @@ header {
 .dropdown-menu.site-header__nav {
   top: ($base-unit*6) - 2;
   width: $base-unit*30;
-  right: -$base-unit*2;
+  right: -$base-unit;
 
   .no-flexbox {
     float: right;
